saves/test/demo_full_20240802_193545/kmap2/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp kmap2_tb.v kmap2.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
kmap2_tb.v:113: $finish called at 16000 (1ps)

iverilog cmd 2 error:

